--- a/src/main/resources/templates/allUsers.html
+++ b/src/main/resources/templates/allUsers.html
@@ -9,7 +9,10 @@
 <body>
 
 <div class="container mt-5">
-    <h2 class="text-center mb-4">All Users</h2>
+    <div class="d-flex justify-content-between align-items-center mb-4">
+        <h2>All Users</h2>
+        <a href="/admin/create" class="btn btn-primary">Create User</a>
+    </div>
 
     <table class="table table-bordered">
         <thead>
@@ -22,19 +25,13 @@
         </tr>
         </thead>
         <tbody>
-
         <tr th:each="user : ${allusers}">
             <td th:text="${user.id}"></td>
             <td th:text="${user.username}"></td>
             <td th:text="${user.email}"></td>
             <td th:text="${user.roles}"></td>
             <td>
-
                 <a th:href="@{/admin/update/{id}(id=${user.id})}" class="btn btn-warning">Edit</a>
-
-
-
-
                 <form action="#" th:action="@{/admin/delete/{id}(id=${user.id})}" method="post" style="display:inline;">
                     <button type="submit" class="btn btn-danger">Delete</button>
                 </form>
