--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Login page</title>
+    <link rel="shortcut icon" href="https://avatars.mds.yandex.net/i?id=36a9e3f9291a6bcf1e09359575ae3cbcd8d9c11e-5232693-images-thumbs&n=13" />
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
@@ -46,7 +47,7 @@
 <body>
 
 <div class="login-container">
-    <h2>Login</h2>
+    <h2>Please sign in</h2>
     <form action="/login" method="post">
         <div class="form-group">
             <label for="username">Username:</label>
