--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -2,17 +2,18 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Регистрация</title>
+    <link rel="shortcut icon" href="https://avatars.mds.yandex.net/i?id=36a9e3f9291a6bcf1e09359575ae3cbcd8d9c11e-5232693-images-thumbs&n=13" />
+    <title>Sign Up page</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 <body>
 
 <div class="container mt-5">
-    <h2 class="text-center">Регистрация</h2>
+    <h2 class="text-center">Sign Up</h2>
     <div class="card p-4 mx-auto" style="max-width: 400px;">
         <form th:action="@{/auth/signup}" method="post">
             <div class="mb-3">
-                <label class="form-label">Имя пользователя</label>
+                <label class="form-label">Username</label>
                 <input type="text" class="form-control" name="username" required>
             </div>
             <div class="mb-3">
@@ -20,7 +21,7 @@
                 <input type="email" class="form-control" name="email" required>
             </div>
             <div class="mb-3">
-                <label class="form-label">Пароль</label>
+                <label class="form-label">password</label>
                 <input type="password" class="form-control" name="password" required>
             </div>
             <button type="submit" class="btn btn-primary w-100">Зарегистрироваться</button>
